--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "aisha-blog",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://aisha-gregg.github.io/",
+  "homepage": "hhttps://aisha-gregg.github.io/aisha-blog/",
   "dependencies": {
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.4.0",
