--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:storybook": "start-storybook -p 9009 -s public",
     "build": "react-scripts build",
+    "build:storybook": "build-storybook -s public",
     "deploy": "gh-pages -d build",
     "test": "react-scripts test"
   },
@@ -37,6 +39,11 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^5.3.17",
+    "@storybook/addon-links": "^5.3.17",
+    "@storybook/addons": "^5.3.17",
+    "@storybook/preset-create-react-app": "^2.1.1",
+    "@storybook/react": "^5.3.17",
     "gh-pages": "2.2.0"
   }
 }
