--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "@storybook/addon-links": "^5.3.17",
     "@storybook/addons": "^5.3.17",
     "@storybook/preset-create-react-app": "^2.1.1",
-    "@storybook/react": "^5.3.17",
-    "gh-pages": "2.2.0"
+    "@storybook/react": "^5.3.17"
   }
 }
