--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     ]
   },
   "dependencies": {
+    "@mdx-js/loader": "1.6.6",
+    "@next/mdx": "9.4.4",
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.4.0",
     "@testing-library/user-event": "7.2.1",
@@ -39,6 +41,7 @@
     "next": "9.3.6",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-paginate-next": "^7.0.4",
     "remark": "12.0.0",
     "remark-html": "11.0.1"
   },
